--- a/section.html
+++ b/section.html
@@ -72,6 +72,7 @@
         </div>
       </div>
     </div>
+    <div class="clearfix"></div>
   </div>
   <!-- End news section-->
 
@@ -84,7 +85,10 @@
           <p class="founder-subheader">OFERTA POR TIEMPO LIMITADO</p>
           <div class="founder-box">
             <p class="header">Paquete de campeones</p>
-            <p class="subheader">Todos los campeones actuales y futuros</p>
+            <div class="subheader">
+            <p>Todos los campeones actuales y futuros</p>
+            <br>
+          </div>
             <img class="founders-champions-img" src="imagenes/founders-champions.png">
           </div>
           <div class="founder-box">
@@ -124,7 +128,7 @@
               <p>Rifle</p>
           </div>
               <div class="champion-description">
-                <p>Un cañón enorme que dispara 20 esquirlas pequeñas de metralla.</p>
+                <p>Un cañón enorme que dispara 20 esquirlas pequeñas de metralla que infligen hasta 700 de daño cada 1 s. Efectivo a corto alcance.</p>
               </div>
           </div>
         </div>
@@ -137,7 +141,7 @@
             <p>Disparo de red</p>
         </div>
             <div class="champion-description">
-              <p>Disparas una red que ralentiza a un objetivo un 50%.</p>
+              <p>Disparas una red que ralentiza a un objetivo un 50 % durante 2 s e inflige 200 puntos de daño.</p>
             </div>
         </div>
         </div>
@@ -176,7 +180,7 @@
             <p>Buck en llamas</p>
         </div>
             <div class="champion-description">
-              <p>Recarga tu munición y hacer que tu arma dispare un 60 % más rápido. </p>
+              <p>Usa Buck en llamas para recargar tu munición y hacer que tu arma dispare un 60 % más rápido durante 6 s. </p>
             </div>
         </div>
         </div>
